Fix navigation on error page and improve the layout of the error page on mobile

--- a/src/components/ErrorComponent/ErrorComponent.module.scss
+++ b/src/components/ErrorComponent/ErrorComponent.module.scss
@@ -6,19 +6,34 @@
   width: 100%;
   height: 100%;
   flex-direction: column;
-  color: $text-color-white;
-  font-family: 'Okta Neue Normal';
-  padding-left: 2rem;
-  padding-right: 2rem;
   overflow: hidden;
 
-  .error-description {
-    font-size: 2em;
-    margin-bottom: 1rem;
-  }
+  .content-container {
+    width: 30%;
 
-  .image-wrapper {
-    width: 40%;
+    .error-description {
+      display: block;
+      color: $text-color-white;
+      font-family: 'Okta Neue Normal';
+      font-size: 2em;
+      margin-bottom: 3rem;
+    }
+
+    .image-wrapper {
+      width: 100%;
+    }
+
+    @media (max-width: 480px) {
+      & {
+        width: 100%;
+        padding-left: 2rem;
+        padding-right: 2rem;
+      }
+
+      & .error-description {
+        font-size: 1.4em;
+      }
+    }
   }
 
   .go-back-button-wrapper {
